<resources>
    <string name="app_name">lab2_login</string>
    <string name="action_settings">Settings</string>
    <string name="yes">yes</string>
    <string name="title">中山大学课外体育积分电子认证系统</string>
    <string name="user_name">用户名:</string>
    <string name="password">密码:</string>
    <string name="stu">学生</string>
    <string name="tea">老师</string>
    <string name="cor">社团</string>
    <string name="admin">管理者</string>
    <string name="btn1">登录</string>
    <string name="btn2">注册</string>
    <string name="hints1">请输入用户名</string>
    <string name="hints2">请输入密码</string>
</resources>
