<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    >
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>

    <!--<include layout="@layout/activity_main"/>-->
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="20sp"/>
    <ImageView
        android:id="@+id/img_tile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:src="@drawable/sysu"/>
    <TableLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:stretchColumns="1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textColor="@color/black"
                android:gravity="right"
                android:textSize="18sp"
                android:layout_column="0"
                android:paddingBottom="10dp"/>
            <EditText
                android:id="@+id/username_edit"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:hint="@string/hints1"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/black"
                android:layout_column="0"
                android:gravity="right"
                android:textSize="20sp"
                android:inputType="text"/>
            <EditText
                android:id="@+id/password_edit"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_column="1"
                android:inputType="textPassword"
                android:hint="@string/hints2" />
        </TableRow>
    </TableLayout>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp">
        <RadioButton
            style="@style/radio_btn"
            android:id="@+id/radio_student"
            android:text="@string/stu"
            android:checked="true"/>
        <RadioButton
            android:layout_marginLeft="10dp"
            style="@style/radio_btn"
            android:id="@+id/radio_tea"
            android:text="@string/tea"
            />
        <RadioButton
            android:layout_marginLeft="10dp"
            style="@style/radio_btn"
            android:id="@+id/radio_cor"
            android:text="@string/cor"/>
        <RadioButton
            android:layout_marginLeft="10dp"
            android:id="@+id/radio_admin"
            android:text="@string/admin"
            style="@style/radio_btn"/>
    </RadioGroup>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center" >

        <TableRow android:gravity="center">
            <Button
                style="@style/btn"
                android:text="@string/btn1"
                android:id="@+id/button1"
                />
            <Button
                style="@style/btn"
                android:text="@string/btn2"
                android:id="@+id/button2"
                android:layout_marginLeft="5dp"
                />
        </TableRow>

    </TableLayout>


    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:gravity="center"-->
    <!--android:layout_marginTop="20dp">-->
    <!--<Button-->
    <!--style="@style/btn"-->
    <!--android:text="@string/btn1"-->
    <!--android:id="@+id/button1"-->
    <!--/>-->
    <!--<Button-->
    <!--style="@style/btn"-->
    <!--android:text="@string/btn2"-->
    <!--android:id="@+id/button2"-->
    <!-- -->
    <!--/>-->
    <!--</LinearLayout>-->


</LinearLayout>
